unpackaged/main/default/objects/pse__Project_Gantt_Settings__c/pse__Project_Gantt_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>These settings control configurable elements of the Project Task Gantt, allowing you to customize its appearance and functions to suit your users.</description>
    <label>Project Task Gantt Settings</label>
</CustomObject>