unpackaged/main/default/objects/pse__Project_Gantt_Settings__c/fields/pse__Columns_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>pse__Columns_Field_Set__c</fullName>
    <defaultValue>"Gantt_Columns"</defaultValue>
    <inlineHelpText>Defines the API name of the field set, on the project task object, that contains the custom columns to show on Project Task Gantt. When the setting is blank, the Gantt Editable Custom Columns field set is used.</inlineHelpText>
    <label>Columns Field Set</label>
    <length>90</length>
    <type>Text</type>
</CustomField>