unpackaged/main/default/objects/pse__Project_Gantt_Settings__c/fields/pse__Disable_Resolve_Dependency_Btn_On_Sync__c.field-meta.xml
<CustomField>
    <fullName>pse__Disable_Resolve_Dependency_Btn_On_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected the resolve dependency button is deactivated when the project task dependencies are synchronized. If deselected, the button remains active when project task dependencies do not need to be synchronized. The default value is deselected.</inlineHelpText>
    <label>Disable Resolve Dependency Btn on Sync</label>
    <type>Checkbox</type>
</CustomField>