unpackaged/main/default/objects/pse__Project_Gantt_Settings__c/fields/pse__Project_Manager_Access__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Manager_Access__c</fullName>
    <inlineHelpText>Determines levels of Gantt edit access for the Project Manager. Values are "Full" (default) - can edit created projects, "Read"- has only read-only access, or "None" - access determined by Permission Controls.</inlineHelpText>
    <label>Project Manager Access</label>
    <length>15</length>
    <type>Text</type>
</CustomField>