unpackaged/main/default/objects/pse__Project_Gantt_Settings__c/fields/pse__Read_Only_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>pse__Read_Only_Field_Set__c</fullName>
    <defaultValue>'Gantt_Read_Only_Fields'</defaultValue>
    <inlineHelpText>The API name of a field set on a project task containing fields that are not editable in Project Task Gantt.</inlineHelpText>
    <label>Read Only Field Set</label>
    <length>90</length>
    <type>Text</type>
</CustomField>