unpackaged/main/default/objects/pse__Project_Gantt_Settings__c/fields/pse__Show_Hours_Completion_Percent_Bar__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Hours_Completion_Percent_Bar__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Determines if the hours complete percentage shows in the task bar display in the Schedule pane. This setting does not control the display of the %Hrs button in the Schedule pane.</inlineHelpText>
    <label>Show Hours Completion % in Task Bar</label>
    <type>Checkbox</type>
</CustomField>