unpackaged/main/default/objects/pse__Project_Gantt_Settings__c/fields/pse__Task_Tooltip__c.field-meta.xml
<CustomField>
    <fullName>pse__Task_Tooltip__c</fullName>
    <inlineHelpText>API name of a field set used to display a custom tooltip for Project Tasks. If defined, this setting replaces the default Project Task tooltip.</inlineHelpText>
    <label>Task Tooltip Field Set</label>
    <length>90</length>
    <type>Text</type>
</CustomField>