unpackaged/main/default/objects/pse__Project_Gantt_Settings__c/fields/pse__Trailing_Buffer_Zone__c.field-meta.xml
<CustomField>
    <fullName>pse__Trailing_Buffer_Zone__c</fullName>
    <defaultValue>10</defaultValue>
    <inlineHelpText>Determines the number of rows to render below the current view in Project Task Gantt. The default is 10. This setting should only be changed after consulting FinancialForce.com Customer Support.</inlineHelpText>
    <label>Trailing Buffer Zone</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>